CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

set(MY_PROJECT_NAME "Advent-of-code-2021")

PROJECT(
    MY_PROJECT_NAME
    VERSION 0.1
)

# add C++ source code directory
ADD_SUBDIRECTORY(code_cpp)

# add the input files needed for the advent calendar
FILE(
    GLOB MY_INPUT_FILES
    "inputs/*.txt"
)
FILE(
    COPY ${MY_INPUT_FILES}
    DESTINATION ${CMAKE_BINARY_DIR}/bin
)